--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>EZ QR Generater</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.rawgit.com/davidshimjs/qrcodejs/gh-pages/qrcode.min.js"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8832553856785011"
+     crossorigin="anonymous"></script>
 </head>
 <body>
     <div>
