--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="index" >
+    <meta name="title" content="EZ QR Generater 쉽고 빠른 QR 생성기">
+    <meta name="description" content="Create a QR code with one click. 클릭 한번으로 QR코드를 만들어보세요.">
+    <meta http-equiv="refresh" content="5;url="https://ezqr.lol/">
+    <meta property="og:url" content="https://ezqr.lol" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="EZ QR Generater 쉽고 빠른 QR 생성기" />
+    <meta property="og:description" content="Create a QR code with one click. 클릭 한번으로 QR코드를 만들어보세요." />
+    <meta property="og:image" content="qr-code.png" />
     <title>EZ QR Generater</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.rawgit.com/davidshimjs/qrcodejs/gh-pages/qrcode.min.js"></script>
